# netns-proxy

./: .gitignore  Cargo.toml  initial.sh  netnsp.json  notes.md  readme.md  remove_logs.sh  setsuid.sh
notes/: g.drawio  net.drawio
src/: config.rs  configurer.rs  ctrl.rs  data.rs  flatpak.rs  id_alloc.rs  ip_gen.rs  lib.rs  listener.rs  main.rs  netlink.rs  nft.rs  probe.rs  schedule.rs  state.rs  sub.rs  tasks.rs  tcproxy.rs  tun2proxy.rs  util.rs  watcher.rs
