[package]
name = "netns-proxy"
version = "0.1.0"
edition = "2021"
default-run = "netnsp-main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
sysinfo = "0.28.4"
flexi_logger = "0.25"
log = "0.4.17"
futures = "0.3.28"
ipnetwork = "0.20.0"
users = "0.11.0"
nix = { version = "0.26.2", features = ["user", "sched"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
anyhow = { version = "1.0.71", features = ["backtrace"] }
libc = "0.2.143"
procfs = "0.15.1"
rtnetlink = "0.12.0"
netlink-packet-route = "0.15.0"
netns-rs = "0.1.0"
tidy-tuntap = { git = "https://github.com/planetoryd/tidy-tuntap", branch = "main" }
mnl = "0.2.2"
zbus = { version = "3.13.1", features = ["tokio"] }
inotify = "0.10.1"
rust-ini = "0.19.0"
rustables = { branch = "netnsp", git = "https://github.com/planetoryd/rustables" }
either = "1.8.1"
pidfd = "0.2.4"

[profile.release]
strip = true
opt-level = "z" # bottleneck is size, not cpu
lto = true

