[package]
name = "netns-proxy"
version = "0.1.0"
edition = "2021"
default-run = "nsproxy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
sysinfo = "0.28.4"
log = "0.4.17"
futures = "0.3.28"
ipnetwork = { version = "0.20.0", features = ["serde"] }
users = "0.11.0"
nix = { version = "0.26.2", features = ["user", "sched"] }
serde = { version = "<=1.0.171", features = ["derive", "rc"] }
serde_json = "1.0.96"
anyhow = { version = "1.0.71", features = ["backtrace"] }
libc = "0.2.143"
procfs = "0.15.1"
rtnetlink = { path = "../rtnetlink" }
netns-rs = "0.1.0"
tidy-tuntap = { path = "../tidy-tuntap" }
inotify = "0.10.1"
rust-ini = "0.19.0"
rustables = { path = "../rustables" }
either = "1.8.1"
pidfd = "0.2.4"
xdg = "2.5.0"
thiserror = "1.0.40"
dashmap = "5.4.0"
derivative = "2.2.0"
serde_with = "3.1.0"
tokio-util = { version = "0.7.8", features = ["codec"] }
bytes = "1.4.0"
env_logger = "0.10.0"
tokio-stream = { version = "0.1.14", features = ["io-util"] }
ron = "0.8.1"
fixed-map = "0.9.2"
async-recursion = "1.0.4"
bitflags = "2.4.0"
tun2proxy = { path = "../tun2proxy" }
smoltcp = "0.10.0"
tokio-send-fd = "0.9.3"
